--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^3.0.0",
     "jquery": "^3.7.1",
+    "mixitup": "^3.3.1",
     "sass": "^1.75.0"
+  },
+  "dependencies": {
+    "browser-sync": "^3.0.2",
+    "ion-rangeslider": "^2.3.1",
+    "slick-carousel": "^1.8.1"
   }
 }
