--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^3.0.0",
     "jquery": "^3.7.1",
+    "jquery-form-styler": "^2.0.2",
     "mixitup": "^3.3.1",
     "sass": "^1.75.0"
   },
