--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "jquery": "^3.7.1",
     "jquery-form-styler": "^2.0.2",
     "mixitup": "^3.3.1",
-    "sass": "^1.75.0"
+    "rateyo": "^2.3.5",
+    "sass": "^1.75.0",
+    "slick-carousel": "^1.8.1"
   },
   "dependencies": {
     "browser-sync": "^3.0.2",
-    "ion-rangeslider": "^2.3.1",
-    "slick-carousel": "^1.8.1"
+    "ion-rangeslider": "^2.3.1"
   }
 }
